[gd_scene load_steps=4 format=3 uid="uid://ds6deqbj6ayv1"]

[ext_resource type="Script" path="res://Project/%Scripts/main_menu.gd" id="1_gxvrx"]
[ext_resource type="Theme" uid="uid://d2f8pqka0jujj" path="res://Project/UI/menu.tres" id="1_rxsms"]
[ext_resource type="Theme" uid="uid://vmk2jipvmjqr" path="res://Project/UI/title.tres" id="2_y3sea"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_rxsms")
script = ExtResource("1_gxvrx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 510.0
offset_bottom = 1080.0
size_flags_horizontal = 0
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 90
theme_override_constants/margin_bottom = 90

[node name="VFlex" type="VBoxContainer" parent="Margins"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Margins/VFlex"]
custom_minimum_size = Vector2(420, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_y3sea")
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Play" type="Button" parent="Margins/VFlex"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Quit")
focus_mode = 0
text = "Play"

[node name="Unlocks" type="Button" parent="Margins/VFlex"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
text = "Unlocks"

[node name="Options" type="Button" parent="Margins/VFlex"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
text = "Options"

[node name="Quit" type="Button" parent="Margins/VFlex"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Play")
focus_mode = 0
text = "Quit"

[connection signal="pressed" from="Margins/VFlex/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Margins/VFlex/Unlocks" to="." method="_on_unlocks_pressed"]
[connection signal="pressed" from="Margins/VFlex/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Margins/VFlex/Quit" to="." method="_on_quit_pressed"]
